--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,7 +25,7 @@ jobs:
         run: pnpm install
       - name: 打包 🏗️
         run: |
-          pnpm ghbuild
+          pnpm build
           touch out/.nojekyll
       - name: 部署 🚀
         uses: JamesIves/github-pages-deploy-action@v4
